[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture2D" id=2]
[ext_resource path="res://scripts/Dash.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 0.211765, 0.847059, 0.121569, 1 )
scale = Vector2( 1, 1.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Dash" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Dash"]
one_shot = true

[node name="WallJump" type="Node2D" parent="."]

[node name="LeftWalls" type="Node2D" parent="WallJump"]

[node name="LeftWall1" type="RayCast2D" parent="WallJump/LeftWalls"]
position = Vector2( 0, -25 )
enabled = true
target_position = Vector2( -40, 0 )

[node name="LeftWall2" type="RayCast2D" parent="WallJump/LeftWalls"]
position = Vector2( 0, 25 )
enabled = true
target_position = Vector2( -40, 0 )

[node name="RightWalls" type="Node2D" parent="WallJump"]

[node name="RightWall1" type="RayCast2D" parent="WallJump/RightWalls"]
position = Vector2( 0, -25 )
enabled = true
target_position = Vector2( 40, 0 )

[node name="RightWall2" type="RayCast2D" parent="WallJump/RightWalls"]
position = Vector2( 0, 25 )
enabled = true
target_position = Vector2( 40, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.1, 1.1 )
drag_horizontal_enabled = true
drag_vertical_enabled = true
position_smoothing_enabled = true
position_smoothing_speed = 6.5
drag_horizontal_offset = 1.0
drag_vertical_offset = 1.0

[connection signal="timeout" from="Dash/Timer" to="Dash" method="_on_Timer_timeout"]
